[gd_scene load_steps=65 format=2]

[ext_resource path="res://Assets/Scenes/SE/SE_Force/SE_Force_7.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/SE/SE_Shoot_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Enemies/EnemyTest/AbilityBody.gd" type="Script" id=3]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-10.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-12.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-11.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-19.png" type="Texture" id=19]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-25.png" type="Texture" id=20]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-13.png" type="Texture" id=21]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-33.png" type="Texture" id=22]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-31.png" type="Texture" id=23]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-34.png" type="Texture" id=24]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-21.png" type="Texture" id=25]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-26.png" type="Texture" id=26]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-32.png" type="Texture" id=27]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-35.png" type="Texture" id=28]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-36.png" type="Texture" id=29]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-37.png" type="Texture" id=30]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-38.png" type="Texture" id=31]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-16.png" type="Texture" id=32]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-39.png" type="Texture" id=33]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-40.png" type="Texture" id=34]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-41.png" type="Texture" id=35]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-14.png" type="Texture" id=36]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-15.png" type="Texture" id=37]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-42.png" type="Texture" id=38]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-43.png" type="Texture" id=39]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-4.png" type="Texture" id=40]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-28.png" type="Texture" id=41]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-27.png" type="Texture" id=42]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-22.png" type="Texture" id=43]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-18.png" type="Texture" id=44]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-24.png" type="Texture" id=45]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-17.png" type="Texture" id=46]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-20.png" type="Texture" id=47]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-23.png" type="Texture" id=48]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-29.png" type="Texture" id=49]
[ext_resource path="res://Assets/Art/SE/Shoot/2/Shoot2-30.png" type="Texture" id=50]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-12.png" type="Texture" id=51]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-8.png" type="Texture" id=52]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-10.png" type="Texture" id=53]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-6.png" type="Texture" id=54]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-11.png" type="Texture" id=55]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-14.png" type="Texture" id=56]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-5.png" type="Texture" id=57]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-13.png" type="Texture" id=58]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-7.png" type="Texture" id=59]
[ext_resource path="res://Assets/Art/SE/Force/7/Force7-9.png" type="Texture" id=60]
[ext_resource path="res://Assets/Scenes/Enemies/EnemyTest/Ability.gd" type="Script" id=61]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 32 ), ExtResource( 46 ), ExtResource( 44 ), ExtResource( 19 ), ExtResource( 47 ), ExtResource( 25 ), ExtResource( 43 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "default",
"speed": 29.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 40 ), ExtResource( 57 ), ExtResource( 54 ), ExtResource( 59 ), ExtResource( 52 ), ExtResource( 60 ), ExtResource( 53 ), ExtResource( 55 ), ExtResource( 51 ), ExtResource( 58 ), ExtResource( 56 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 168, 128 )

[node name="AbilityEnemyShoot" type="Node2D"]
script = ExtResource( 61 )

[node name="SE_Shoot_2" parent="." instance=ExtResource( 2 )]
scale = Vector2( 1, 0.5 )
frames = SubResource( 1 )

[node name="SE_Force_7" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 2 )

[node name="AbilityBody" type="RigidBody2D" parent="."]
collision_layer = 64
collision_mask = 57
mode = 3
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AbilityBody"]
position = Vector2( 104, 0 )
shape = SubResource( 3 )
